RVB-123: Fix for vimeo icon on IE

--- a/profiles/vp_profile/themes/vp_theme/css/editor.css
+++ b/profiles/vp_profile/themes/vp_theme/css/editor.css
@@ -4118,8 +4118,7 @@ h3.icon-wrap-2 .icon-cv {
 }
 
 .vap-alternative-frontpage__static-footer-first .vap-alternative-frontpage__static-footer-small-links .vap-alternative-frontpage__static-social-small-links-vimeo {
-  background-image: url(../img/10-global/alternative-frontpage-icon-vimeo.svg);
-  background-size: 32px;
+  background-image: url(../img/10-global/alternative-frontpage-icon-vimeo.png);
   background-position: -10% 100% !important;
 }
 
