--- a/profiles/vp_profile/themes/vp_theme/sass/includes/__60-content/_vap-alternative-frontpage--static-social.scss
+++ b/profiles/vp_profile/themes/vp_theme/sass/includes/__60-content/_vap-alternative-frontpage--static-social.scss
@@ -58,7 +58,6 @@
           color: $color-link;
         }
       }
-
       .vap-alternative-frontpage__static-social-small-links-fb {
         background-image: url(../img/10-global/alternative-frontpage-icon-facebook.svg);
       }
@@ -77,11 +76,9 @@
         background-size: 24px;
       }
       .vap-alternative-frontpage__static-social-small-links-vimeo {
-        background-image: url(../img/10-global/alternative-frontpage-icon-vimeo.svg);
-        background-size: 32px;
+        background-image: url(../img/10-global/alternative-frontpage-icon-vimeo.png);
         background-position: -10% 100% !important;
       }
-
     }
   }
 
